# gru-qat

./: .gitignore  AUDIT-REPORT.md  CLAUDE.md  DEVELOPMENT.md  README.md  SCOPE.md  aosnare9ddl5nrimaatfcvmgmpa0hcvr.darc  manifest  pyproject.toml  rphgtpbu0sa6b79oaqqkksseuuqbeapb
.beads/: metadata.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: butterfly-batch-invariance-c2a.md
.planning/phases/01-reference-path-parity-vs-nn-gru/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-PATTERNS.md
.planning/phases/02-triton-fast-path-parity-vs-reference/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  (+10 more)
bench/: bench_layer.py
src/gru_qat/: __init__.py  calibration.py  gru_cell.py  gru_layer.py  quantizers.py  ste.py  structure.py
tests/: test_butterfly_dispatch.py  test_calibration.py  test_edge_cases.py  test_layer_parity.py  test_parity.py  test_qat_smoke.py  test_quantizers.py  test_scan_wrapper_validation.py  test_ste.py  test_structure.py  test_structure_parity.py  test_structured_input_dispatch.py  test_triton_blockdiag.py  test_triton_blockdiag_strict.py  test_triton_butterfly_strict.py  test_triton_diagonal.py  test_triton_diagonal_strict.py  test_triton_monarch.py  test_triton_monarch_strict.py  test_triton_scan.py  test_triton_scan_strict.py
(+41 files in other folders)
