[project]
name = "gru-qat"
version = "0.0.1"
description = "Pluggable QAT and quantized inference for GRU"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
triton = ["triton>=2.2"]
dev = [
    "pytest>=7",
    "pytest-xdist>=3",
    "mypy>=1.7",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gru_qat"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/gru_qat"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
